--- a/ceo/templates/home.html
+++ b/ceo/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1>Panel CEO</h1>
-<p>Bienvenido {{ request.user.dni }} (Rol: CEO)</p>
-<a href="{% url 'usuarios:logout' %}">Cerrar sesión</a>
+<p>Bienvenido  (Rol: CEO)</p>
+<a>Cerrar sesión</a>
 {% endblock %}
