--- a/usuarios/templates/landingFooter.html
+++ b/usuarios/templates/landingFooter.html
@@ -11,7 +11,7 @@
         <div class="row pb-5">
             <div class="col-lg-4 col-md-6">
                 <div class="navbar-brand text-dark p-0 me-0 mb-3 mb-lg-4">
-                    <img src="{% static 'img/logo.svg' %}" width="47" alt="Silicon">
+                    <img src="{% static 'images/logo.png' %}" width="47" alt="Silicon">
                     Inventa
                 </div>
                 <p class="fs-sm pb-lg-3 mb-4">Nuestra startup se mantiene a la vanguardia de las innovaciones en
@@ -68,10 +68,10 @@
                 </div>
             </div>
         </div>
-        <p class="nav d-block fs-xs text-center text-md-start pb-2 pb-lg-0 mb-0">
+        <p class="nav d-block fs-xs text-center text-md-start pb-2 pb-lg-0 mb-0 fs-5">
             ©
             <script>document.write(new Date().getFullYear())</script>
-            <a class="nav-link d-inline-block p-0" href="#" target="_blank" rel="noopener">SynaptIA</a>
+            <a class="nav-link d-inline-block p-0" href="{% url 'landing' %}" rel="noopener">SynaptIA</a>
             - Desarrollado por Egoavil Huaman Cristhian Rudolf
 
         </p>
