--- a/usuarios/templates/usuarios/landing.html
+++ b/usuarios/templates/usuarios/landing.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Inventa - Egoavil Huamana Cristhian Rudolf">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="{% static 'imagenes/logo.png' %}">
-    <link rel="stylesheet" media="screen" href="{% static 'css/theme.min.css' %}"/>
+    <link href="{% static 'css/temas.css' %}" rel="stylesheet"/>
     <link href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" rel="stylesheet"/>
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel ="stylesheet"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet"/>
@@ -195,7 +195,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jarallax@2/dist/jarallax.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/rellax@1.12.1/rellax.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="{% static 'js/theme.min.js' %}"></script>
+    <script src="{% static 'js/temas.js' %}"></script>
 </body>
 
 </html>
