--- a/usuarios/templates/usuarios/landingFooter.html
+++ b/usuarios/templates/usuarios/landingFooter.html
@@ -10,10 +10,10 @@
     <div class="container pt-lg-4">
         <div class="row pb-5">
             <div class="col-lg-4 col-md-6">
-                <div class="navbar-brand text-dark p-0 me-0 mb-3 mb-lg-4">
+                <a href="{% url 'home' %}" class="navbar-brand text-dark p-0 me-0 mb-3 mb-lg-4">
                     <img src="{% static 'imagenes/logo.png' %}" width="47">
                     Inventa
-                </div>
+                </a>
                 <p class="fs-sm pb-lg-3 mb-4">Nuestra startup se mantiene a la vanguardia de las innovaciones en
                     inteligencia artificial
                     y realiza investigaciones constantes para ofrecer un servicio actualizado y de alta calidad a
