unidades y categorias final

--- a/usuarios/templates/usuarios/landingCuerpo.html
+++ b/usuarios/templates/usuarios/landingCuerpo.html
@@ -15,7 +15,7 @@
 
       <div class="col-md-5 offset-md-2 pt-3 mt-xl-1">
         <div class="text-md-end mt-1">
-          <img src="{% static 'images/startup.svg' %}" alt="" class="img-fluid" />
+          <img src="{% static 'imagenes/landing/startup.svg' %}" alt="" class="img-fluid" />
         </div>
       </div>
     </div>
