--- a/inventario/templates/inventario/barraLateral.html
+++ b/inventario/templates/inventario/barraLateral.html
@@ -41,7 +41,7 @@
             </li>
 
             <li class="side-nav-item">
-                <a href="#" class="side-nav-link">
+                <a href="{% url 'listaVentas' %}" class="side-nav-link">
                     <i class="uil-store"></i>
                     <span> Ventas </span>
                 </a>
@@ -81,7 +81,7 @@
                             <a href="#">Trabajadores</a>
                         </li>
                         <li>
-                            <a href="#">Clientes</a>
+                            <a href="{% url 'listaClientes' %}">Clientes</a>
                         </li>
                         <li>
                             <a href="#">Proveedores</a>
