--- a/inventario/templates/inventario/base.html
+++ b/inventario/templates/inventario/base.html
@@ -207,7 +207,7 @@
                   <span>Cambiar de contraseña</span>
                 </a>
 
-                <a href="javascript:void(0);" class="dropdown-item notify-item">
+                <a href="{% url 'logout' %}" class="dropdown-item notify-item">
                   <i class="mdi mdi-logout me-1"></i>
                   <span>Salir</span>
                 </a>
