--- a/inventario/templates/inventario/listaCategorias.html
+++ b/inventario/templates/inventario/listaCategorias.html
@@ -112,8 +112,8 @@
                                     <div class="col-12">
                                         <div class="mb-3">
                                             <label class="control-label form-label">Descripción de la categoría</label>
-                                            <input class="form-control" placeholder="Ingresa la descripción de la categoría"
-                                                type="text" name="simbolo" id="simboloUnidad"/>
+                                            <textarea class="form-control" id="simboloUnidad" name="simbolo"
+                                                rows="5" placeholder="Ingresa la descripción de la categoría"></textarea>
                                         </div>
                                     </div>
                                 </div>
