--- a/usuarios/templates/usuarios/crearEmpresa.html
+++ b/usuarios/templates/usuarios/crearEmpresa.html
@@ -2,8 +2,8 @@
 {% load static %}
 
 {% block content %}
-<script src="{% static 'js/vendor.js' %}"></script>
-<script src="{% static 'js/app.js' %}"></script>
+<script src="{% static 'js/vendor.min.js' %}"></script>
+<script src="{% static 'js/app.min.js' %}"></script>
 
 
 <div class="container-fluid">
